# pipecall

./: Cargo.toml  README.md  config.toml
.agents/: AGENTS.md
src/: config.rs  main.rs
src/bluetooth/: hfp.rs  mod.rs
