[package]
name = "pipecall"
version = "0.1.0"
edition = "2024"
description = "Route iPhone calls & SMS to your Linux desktop via Bluetooth"
license = "MIT"

[dependencies]
anyhow = "1.0.103"
bluer = { version = "0.17.4", features = ["bluetoothd", "rfcomm"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
